syntax = "proto3";

package proto.v1;

option go_package = "./pb";

service HelloService {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
  rpc BeatsPerMinute (BeatsPerMinuteRequest) returns (stream BeatsPerMinuteResponse) {}
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}

message BeatsPerMinuteRequest {
  string uuid = 1;
}

message BeatsPerMinuteResponse {
  uint32 value = 1;
  uint32 minute = 2;
}